@@ -4,6 +4,7 @@ smoof 1.6.0.4
 * Fixed bug in getLoggedValues when logging of x-values was set to FALSE in addLoggingWrapper
 * Fixed bug with instance ID mapping in makeBiObjBBOBFunction
 * Added extra helper functions to extract all problem instance-specific data from MPM2 generator
+* Added R-based evaluation environment for MPM2 generator which greatly accelerates evaluation in multi-objective settings
 
 smoof 1.6.0.3
 =============
